--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QL'
 - !lcsh 'Animal behavior'
+- GITenberg
 title: The Human Side of Animals
 url: http://www.gutenberg.org/ebooks/19850
